@@ -1,6 +1,6 @@
 {
   "name": "veduta",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Veduta is a Web Application to search geographically for Vedute",
   "author": "Albert Schröder",
   "repository": {
